Attempt to fix publishing